2010-07-19  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        [Qt] Remove non-existent files from Skipped list.

        * platform/qt/Skipped:
         - Unskip fast/dynamic/flash-replacement-test.html, because it was removed by r61289
         - Rename fast/js/sputnik/Conformance/11_Expressions/11.5_Multiplicative_Operators/11.5.3_Applying_the_percent_Operator/S11.5.3_A4_T2.html after r63284
         - Unskip inspector/debugger-breakpoints-not-activated-on-reload.html, because it was removed by r63314
         - Unskip media/video-src-empty.html, because it was removed by r63119

2010-07-19  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Canvas: Wrong internal positioning of drawImage() shadows
        https://bugs.webkit.org/show_bug.cgi?id=42510

        Unskip:
        - canvas/philip/tests/2d.shadow.canvas.alpha.html
        - canvas/philip/tests/2d.shadow.canvas.transparent.1.html
        - canvas/philip/tests/2d.shadow.canvas.transparent.2.html
        - canvas/philip/tests/2d.shadow.image.alpha.html
        - canvas/philip/tests/2d.shadow.image.transparent.1.html
        - canvas/philip/tests/2d.shadow.image.transparent.2.html

        * platform/qt/Skipped:

2010-07-19  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Render shadow when drawing one canvas onto another
        https://bugs.webkit.org/show_bug.cgi?id=42508

        Unskip:
        - canvas/philip/tests/2d.shadow.canvas.basic.html

        Reskip (bug now exposed):
        - canvas/philip/tests/2d.shadow.canvas.transparent.1.html

        * platform/qt/Skipped:

2010-07-19  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed.

        [Qt] Add platform specific expected results for new passing SVG tests.
        Compared to Mac png files and Mac expected files.
