@@ -12,12 +12,12 @@ function b()
 function a()
 {
     b();
+    dumpConsoleMessages();
 }
 
 function doit()
 {
     setTimeout(a, 0);
-    dumpConsoleMessages();
 }
 
 </script>
