@@ -3128,6 +3128,4 @@ BUGWK20011 : printing/setPrinting.html = FAIL
 // Needs V8 change.
 BUG49343 : fast/js/reserved-words-as-property.html = TEXT
 
-BUG42485 WIN : inspector/console-trace.html = TEXT
-
 BUG42486 MAC DEBUG : svg/filters/filter-empty-g.svg = CRASH
