@@ -2,6 +2,16 @@
 
         Reviewed by Pavel Feldman.
 
+        Web Inspector: add/removeStyleClass shouldn't increase number of spaces between class names.
+        https://bugs.webkit.org/show_bug.cgi?id=42485
+
+        * inspector/front-end/utilities.js:
+        (Element.prototype.removeStyleClass):
+
+2010-07-19  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
         Web Inspector: show stack trace for uncaught exceptions when Web Inspector is open.
         https://bugs.webkit.org/show_bug.cgi?id=42560
 
